crates/monochange/tests/snapshots/cli_step_input_overrides__change_file@create_change_file_step_can_hardcode_inputs_without_cli_inputs.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: contents
---
---
core: minor
---

# hardcoded change
