crates/monochange/tests/snapshots/cli_step_input_overrides__cli_step_override_json_scenarios_match_snapshot@affected_packages.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: redacted
---
{
  "affectedPackageIds": [],
  "changedPaths": [
    "crates/core/CHANGELOG.md"
  ],
  "changesetPaths": [],
  "comment": null,
  "coveredPackageIds": [],
  "enforce": true,
  "errors": [],
  "ignoredPaths": [
    "crates/core/CHANGELOG.md"
  ],
  "labels": [
    "no-changeset-required"
  ],
  "matchedPaths": [],
  "matchedSkipLabels": [
    "no-changeset-required"
  ],
  "required": false,
  "status": "skipped",
  "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required",
  "uncoveredPackageIds": []
}
