crates/monochange/tests/snapshots/cli_step_input_overrides__cli_step_override_json_scenarios_match_snapshot@comment_released_issues.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: redacted
---
{
  "changedFiles": [
    "Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml"
  ],
  "changelogs": [
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "#### add github fixture coverage"
            ],
            "title": "Minor"
          }
        ],
        "summary": [],
        "title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])"
      },
      "ownerId": "core",
      "ownerKind": "package",
      "path": "crates/core/CHANGELOG.md",
      "rendered": "[multiline text]"
    }
  ],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": true,
          "commitWebUrls": true,
          "issueComments": true,
          "relatedIssues": true,
          "reviewRequestLookup": true
        },
        "host": "github.com",
        "introduced": null,
        "lastUpdated": null,
        "provider": "github",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add github fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "changeType": "minor",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release-comments",
  "deletedChangesets": [],
  "dryRun": true,
  "groupVersion": null,
  "packagePublications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "1.1.0"
    }
  ],
  "plan": {
    "compatibilityEvidence": [],
    "decisions": [
      {
        "bump": "minor",
        "package": "cargo:crates/core/Cargo.toml",
        "plannedVersion": "1.1.0",
        "reasons": [
          "add github fixture coverage"
        ],
        "trigger": "direct-change",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [],
    "unresolvedItems": [],
    "warnings": [],
    "workspaceRoot": "."
  },
  "releaseRecordPath": "[ROOT]/.monochange/releases/[SHA]/release.json",
  "releaseTargets": [
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "renderedChangelogTitle": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])",
      "renderedTitle": "core 1.1.0 ([DATE])",
      "tag": true,
      "tagName": "core/v1.1.0",
      "version": "1.1.0",
      "versionFormat": "namespaced"
    }
  ],
  "releasedPackages": [
    "workflow-core"
  ],
  "version": "1.1.0"
}
