crates/monochange/tests/snapshots/cli_step_input_overrides__cli_step_override_json_scenarios_match_snapshot@render_release_manifest.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: json
---
{
  "changedFiles": [
    "Cargo.toml",
    "changelog.md",
    "crates/app/Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml",
    "group.toml"
  ],
  "changelogs": [
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "entries": [
              "- **core**: add core feature"
            ],
            "title": "Features"
          }
        ],
        "summary": [
          "Grouped release for `sdk`."
        ],
        "title": "1.1.0 ([DATE])"
      },
      "ownerId": "sdk",
      "ownerKind": "group",
      "path": "changelog.md",
      "rendered": "## 1.1.0 ([DATE])\n\nGrouped release for `sdk`.\n\n### Features\n\n- **core**: add core feature"
    },
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "entries": [
              "- add core feature"
            ],
            "title": "Features"
          }
        ],
        "summary": [],
        "title": "1.1.0 ([DATE])"
      },
      "ownerId": "core",
      "ownerKind": "package",
      "path": "crates/core/CHANGELOG.md",
      "rendered": "## 1.1.0 ([DATE])\n\n### Features\n\n- add core feature"
    }
  ],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": false,
          "commitWebUrls": false,
          "issueComments": false,
          "relatedIssues": false,
          "reviewRequestLookup": false
        },
        "host": null,
        "introduced": null,
        "lastUpdated": null,
        "provider": "generic_git",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add core feature",
      "targets": [
        {
          "bump": "minor",
          "changeType": null,
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release-manifest",
  "deletedChangesets": [],
  "dryRun": true,
  "groupVersion": "1.1.0",
  "plan": {
    "compatibilityEvidence": [],
    "decisions": [
      {
        "bump": "minor",
        "package": "cargo:crates/app/Cargo.toml",
        "plannedVersion": "1.1.0",
        "reasons": [
          "depends on `cargo:crates/core/Cargo.toml`",
          "shares version group `sdk`"
        ],
        "trigger": "version-group-synchronization",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      },
      {
        "bump": "minor",
        "package": "cargo:crates/core/Cargo.toml",
        "plannedVersion": "1.1.0",
        "reasons": [
          "add core feature",
          "shares version group `sdk`"
        ],
        "trigger": "direct-change",
        "upstreamSources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [
      {
        "bump": "minor",
        "id": "sdk",
        "members": [
          "cargo:crates/core/Cargo.toml",
          "cargo:crates/app/Cargo.toml"
        ],
        "plannedVersion": "1.1.0"
      }
    ],
    "unresolvedItems": [],
    "warnings": [],
    "workspaceRoot": "."
  },
  "releaseTargets": [
    {
      "id": "sdk",
      "kind": "group",
      "members": [
        "core",
        "app"
      ],
      "release": true,
      "renderedChangelogTitle": "1.1.0 ([DATE])",
      "renderedTitle": "1.1.0 ([DATE])",
      "tag": true,
      "tagName": "v1.1.0",
      "version": "1.1.0",
      "versionFormat": "primary"
    }
  ],
  "releasedPackages": [
    "workflow-app",
    "workflow-core"
  ],
  "version": "1.1.0"
}
