crates/monochange/tests/snapshots/cli_step_input_overrides__command_output@command_step_can_hardcode_inputs_without_cli_inputs.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: contents
---
hardcoded-message
