crates/monochange/tests/snapshots/cli_step_input_overrides__stdout@command_step_can_hardcode_inputs_without_cli_inputs.snap
---
source: crates/monochange/tests/cli_step_input_overrides.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
command `announce` completed
commands:
- ran `printf '%s' 'hardcoded-message' > command-output.txt`
